--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   Необходимо включить поддержку JavaScript для запуска приложения.
 </noscript>
 
-<body class="page"></body>
+<body class="body"></body>
 <div id="root"></div>
 
 </html>
